Updated the chef infra version
Signed-off-by: Ashique Saidalavi <Ashique.saidalavi@progress.com>

--- a/chef-habitat/Dockerfile
+++ b/chef-habitat/Dockerfile
@@ -5,8 +5,8 @@ ARG HAB_VERSION="1.6.1041"
 ARG HABITAT_PACKAGE="core/hab/1.6.1041"
 
 ARG INFRA_CHANNEL="unstable"
-ARG INFRA_PACKAGE="ashiqueps/chef-infra-client"
-ARG INFRA_PACKAGE_VERSION="19.0.35"
+ARG INFRA_PACKAGE="chef/chef-infra-client"
+ARG INFRA_PACKAGE_VERSION="19.0.46"
 
 ADD https://packages.chef.io/files/${CHANNEL}/habitat/${HAB_VERSION}/hab-x86_64-linux.tar.gz /tmp/hab.tar.gz
 
@@ -25,6 +25,6 @@ RUN rm -rf /tmp/hab
 RUN hab pkg install --channel "${CHANNEL}" "core/bash"
 RUN TMP=$(hab pkg path core/bash) && ln -s "${TMP}/bin/bash" /bin/bash
 
-RUN hab pkg install --binlink --force --channel "${INFRA_CHANNEL}" "${INFRA_PACKAGE}"
+RUN hab pkg install --binlink --force --channel "${INFRA_CHANNEL}" "${INFRA_PACKAGE}/${INFRA_PACKAGE_VERSION}"
 
 VOLUME [ "/hab" ]
